--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mvp"
+name = "backend"
 version = "0.1.0"
 description = ""
 authors = ["Hung Nguyen <hung.nguyen.2@minerva.kgi.edu>"]
