--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ motor = "^2.3.0"
 tornado = "^6.1"
 python-dotenv = "^0.15.0"
 fastapi-users = {extras = ["mongodb"], version = "^3.0.6"}
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
