--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,12 @@ tornado = "^6.1"
 python-dotenv = "^0.15.0"
 fastapi-users = {extras = ["mongodb"], version = "^3.0.6"}
 requests = "^2.25.1"
+pytest-asyncio = "^0.14.0"
+httpx = "^0.17.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^4.6"
+pytest = "^6.0"
+pylint = "^2.7.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
