--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "draft-js": "^0.11.7",
     "immutability-helper": "^3.1.1",
     "immutable": "^4.0.0-rc.12",
+    "luxon": "^1.26.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
