--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ fastapi-users = {extras = ["mongodb"], version = "^3.0.6"}
 requests = "^2.25.1"
 pytest-asyncio = "^0.14.0"
 httpx = "^0.17.1"
+fastapi-utils = "^0.2.1"
+fastapi-mail = "^0.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
