--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-asyncio = "^0.14.0"
 httpx = "^0.17.1"
 fastapi-utils = "^0.2.1"
 fastapi-mail = "^0.3.5"
+pytest-cov = "^2.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
